# kp_wf

./: .gitignore  AAD_LIBRARY_IMPLEMENTATION_GUIDE.md  AAD_REQUIREMENTS.txt  GREEKS_COMPARISON_LSQ_RESULTS.txt  LSQ_GREEKS_COMPARISON.txt  MULTI_SWAPTION_COMPARISON_RESULTS.txt  README.md  SWAPTION_COMPARISON_RESULTS.txt
cpp/: CMakeLists.txt  european_option_greeks.cpp
cpp/HW1F_Library/: CMakeLists.txt  README.md
cpp/HW1F_Library/apps/: greeks_comparison.cpp  greeks_comparison_lsq.cpp  greeks_validation.cpp  multi_swaption_comparison.cpp  run_hw1f.cpp  swaption_comparison.cpp  vol_greeks_comparison.cpp
cpp/HW1F_Library/calibration/: calibration.hpp  calibration_refactored.hpp
cpp/HW1F_Library/curve/: discount_curve.hpp  vol_surface_weights.hpp
cpp/HW1F_Library/docs/: COMPARISON_ANALYSIS.md  GREEKS_METHODS_DOCUMENTATION.md  LEAST_SQUARES_COMPARISON.md  MULTI_SWAPTION_ANALYSIS_RESULTS.md  MULTI_SWAPTION_COMPARISON_RESULTS.txt  REFACTORING_SUMMARY.md
cpp/HW1F_Library/hw1f/: hw1f_model.hpp
cpp/HW1F_Library/instruments/: swaption.hpp
cpp/HW1F_Library/pricing/: black_vega.hpp
cpp/HW1F_Library/pricing/jamshidian/: jamshidian.hpp
cpp/HW1F_Library/pricing/montecarlo/: montecarlo.hpp
cpp/HW1F_Library/risk/ift/: ift_greeks.hpp  ift_greeks_refactored.hpp
cpp/HW1F_Library/tests/: test_dimensions.cpp  test_ift_vs_fd.cpp  test_main.cpp  test_vr_buckets.cpp
cpp/HW1F_Library/utils/: cholesky_factorization.hpp  common.hpp  dimension_types.hpp
cpp/HullWhiteSwaption/: CMakeLists.txt  HullWhite.hpp  HullWhiteEnhanced.hpp  HullWhiteJamshidian.hpp  RESULTS_COMPARISON.txt  main.cpp  main_enhanced.cpp  main_jamshidian.cpp
hw_model/: README.md  main.py
hw_model/src/: calibration.py  hullwhite.py  plotting.py
python/: european_option_greeks.py  swaption_comprehensive_comparison.py  xad_hullwhite_greeks.py  xad_hullwhite_swaption.py
